Implemented metrics reporting on the test set and saving of the best model after training

--- a/src/eda.ipynb
+++ b/src/eda.ipynb
@@ -8,7 +8,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from pandas_profiling import ProfileReport"
+    "from pathlib import Path\n",
+    "from pandas_profiling import ProfileReport\n",
+    "from census_preprocess import pre_process"
    ]
   },
   {
@@ -18,13 +20,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_datafile = '../data/census_cleaned.csv'\n",
-    "df = pd.read_csv(raw_datafile)"
+    "raw_datafile = '../data/census.csv'\n",
+    "preprocessed_datafile = '../data/census_cleaned.csv'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7ce0433-4142-4234-ab9a-2cec807ab24c",
+   "metadata": {},
+   "source": [
+    "If the pre-proessed dataset is not found, then make it."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "86f249b4-a151-4440-b06e-9062762e940b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not Path(preprocessed_datafile).exists():\n",
+    "        pre_process(raw_datafile, preprocessed_datafile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "785f0425-204d-45ba-bcc5-a4d9a91c7d28",
+   "metadata": {},
+   "source": [
+    "Load the pre-processed dataset and take a gander"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "273bd077-d078-4d26-b530-cb56d8d27357",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(preprocessed_datafile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "b0c701b7-b25f-46aa-b1cd-0482a68be6d3",
    "metadata": {},
    "outputs": [
@@ -337,24 +376,6 @@
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>34</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>245487</td>\n",
-       "      <td>7th-8th</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Transport-moving</td>\n",
-       "      <td>Husband</td>\n",
-       "      <td>Amer-Indian-Eskimo</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>45</td>\n",
-       "      <td>Mexico</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -376,7 +397,6 @@
        "12   23           Private  122272     Bachelors             13   \n",
        "13   32           Private  205019    Assoc-acdm             12   \n",
        "14   40           Private  121772     Assoc-voc             11   \n",
-       "15   34           Private  245487       7th-8th              4   \n",
        "\n",
        "           marital-status         occupation   relationship  \\\n",
        "0           Never-married       Adm-clerical  Not-in-family   \n",
@@ -394,7 +414,6 @@
        "12          Never-married       Adm-clerical      Own-child   \n",
        "13          Never-married              Sales  Not-in-family   \n",
        "14     Married-civ-spouse       Craft-repair        Husband   \n",
-       "15     Married-civ-spouse   Transport-moving        Husband   \n",
        "\n",
        "                  race     sex  capital-gain  capital-loss  hours-per-week  \\\n",
        "0                White    Male          2174             0              40   \n",
@@ -412,7 +431,6 @@
        "12               White  Female             0             0              30   \n",
        "13               Black    Male             0             0              50   \n",
        "14  Asian-Pac-Islander    Male             0             0              40   \n",
-       "15  Amer-Indian-Eskimo    Male             0             0              45   \n",
        "\n",
        "   native-country  salary  \n",
        "0   United-States       0  \n",
@@ -429,22 +447,29 @@
        "11          India       1  \n",
        "12  United-States       0  \n",
        "13  United-States       0  \n",
-       "14            NaN       1  \n",
-       "15         Mexico       0  "
+       "14            NaN       1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(16)"
+    "df.head(15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f689c0fe-4139-4297-830a-725db98a7dce",
+   "metadata": {},
+   "source": [
+    "Generate the EDA report"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "43bdbcb1-0caa-45ae-bf33-ce622052e0ec",
    "metadata": {},
    "outputs": [],
@@ -454,14 +479,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "28641802-3116-4bbb-95f7-162a5c34ed25",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "614c8d7f74b94f929381879f25b11c93",
+       "model_id": "e3ae70e2520f424598bee8472965ce69",
        "version_major": 2,
        "version_minor": 0
       },
@@ -475,7 +500,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe46ae5216f741df97aebd06d4343cfd",
+       "model_id": "f78b536cf2134120aee4919bd86787af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -503,7 +528,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ec2cfac40304d958b3fad3bc6e524a8",
+       "model_id": "342670f37c49446e8277c0a982db7b63",
        "version_major": 2,
        "version_minor": 0
       },
@@ -550,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "ebb67db7-4ac3-4d47-90f5-4d178e7273f1",
    "metadata": {},
    "outputs": [
@@ -575,7 +600,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "6fb4be5e-13ff-499b-a1e3-a5fe26c127c3",
    "metadata": {},
    "outputs": [
@@ -607,7 +632,7 @@
        "Name: salary, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
